# Text-Input-Box

./: Application.cpp  Application.h  CMakeLists.txt  ColorChanger.cpp  ColorChanger.h  Cursor.cpp  Cursor.h  EventHandler.h  FileReader.cpp  FileReader.h  GUIComponent.cpp  GUIComponent.h  Heap.cpp  Heap.h  History.cpp  History.h  HistoryNode.h  KeyShortcuts.cpp  KeyShortcuts.h  Label.cpp  Label.h  Letter.cpp  Letter.h  MouseEvents.cpp  MouseEvents.h  MultiText.cpp  MultiText.h  MultiTextSnapshot.cpp  MultiTextSnapshot.h  NewColorChanger.cpp  NewColorChanger.h  Position.cpp  Position.h  README.md  Snapshot.cpp  Snapshot.h  SnapshotInterface.cpp  SnapshotInterface.h  States.cpp  States.h  (+14 more)
